--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -39,6 +39,7 @@ if (DRI_TESTS)
       ${PROJECT_LIBRARY_TARGET_NAME}-gpu_lidar
       ${PROJECT_LIBRARY_TARGET_NAME}-rgbd_camera
       ${PROJECT_LIBRARY_TARGET_NAME}-thermal_camera
+    TEST_LIST dri_tests_targets
   )
 endif()
 
@@ -51,5 +52,10 @@ ign_build_tests(TYPE INTEGRATION
     ${PROJECT_LIBRARY_TARGET_NAME}-logical_camera
     ${PROJECT_LIBRARY_TARGET_NAME}-magnetometer
     ${PROJECT_LIBRARY_TARGET_NAME}-imu
+    TEST_LIST tests_targets
 )
 
+if (APPLE)
+  set(_test_env_var "DYLD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
+  set_tests_properties(${tests_targets} ${dri_tests_targets} PROPERTIES ENVIRONMENT "${_test_env_var}")
+endif()
